# mpthub

./: .gitignore  .resources_rc.py  MPTHub_Installer.nsi  MptHub.sln  README.md  app.py  app_mpt.py  build_mpt.py  mainOld.py  mainWindow.py  pyproject.toml  requirements.txt  resources_rc.py  settings.toml
.qt_for_python/uic/: diffusivity.py  mainwindow.py
CodeReference/: MPTHub_Installer.nsi  pyproject.toml
CodeReference/docs/: Use cases.docx  useCase.puml  workflow.puml
CodeReference/mpt/: __init__.py  model.py
CodeReference/ui/: diffusivity.ui  mainModern.ui
CodeReference/ui/resources/: application_resources.qrc  diffusivity_resources.qrc
MptHub.ConsoleApp/: MptHub.ConsoleApp.csproj  Program.cs
MptHub.Domain/: Coordinate.cs  Frame.cs  Trajectory.cs
docs/: Use cases.docx  siteMap.wsd  useCase.puml
mpt/: __init__.py  database.py  model.py  models.py  mpt.py  mptOld.py  settings.py  views.py
mpt/views/: analysisWindow.py  diffusivityWindow.py  mainWindow.py  mainWindow_Old.py
mpt/views_OLD/: __init__.py
notebooks/: txt_import.ipynb
remove/: app.py  requirements.txt
remove/mpt/: __init__.py  database.py  model.py  models.py  views.py
src/: main.py  mainWindow.py
src/data/: cfg-diffusivity.json  mpt-config.json
src/img/: icon.icns
src/mpt/: __init__.py  analysis.py  database.py  mpt.py  mpt_BKP.py  mpt_file.py  mpt_partial.py  trkPyLif.py  utils.py  video.py
ui/: MainWindow.py  app_config.ui  diffusivity.ui  mainModern.ui  mainwindow.ui
ui/resources/: resources.qrc  resourcesModern.qrc
