[tool.poetry]
name = "MPT"
version = "0.6.7"
description = "Reads ImageJ results file, in CSV. Exports Multiple Particle Tracking Analysis in xlsx format."
authors = ["Leandro Gabriel <lassisg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.3"
dash = "^1.17.0"
dash-bootstrap-components = "^0.10.7"
numpy = "1.19.3"
pandas = "^1.1.4"
SQLAlchemy = "^1.3.20"
pathlib = "^1.0.1"

wxPython = "^4.0.7"
matplotlib = "^3.2.1"
xlsxwriter = "^1.2.8"
briefcase = "^0.2.10"
trackpy = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
autopep8 = "^1.5.4"
ipykernel = "^5.3.4"

pyinstaller = "^3.6"
pywin32-ctypes = "^0.2.0"
pefile = "^2019.4.18"
tornado = "^6.0.4"
pypiwin32 = "^223"

jupyter = "^1.0.0"
pywin32 = "^300"
pywinpty = "^0.5.7"

[tool.poetry.scripts]
build_mpt = "build_mpt:main"
# build = 'pyinstaller --clean -D --noconfirm -w --add-data="README.md;." --add-data="LICENSE;." --add-data="mpt/assets/*;./mpt/assets/" -n "MPT_Analysis" -i ".\mpt\assets\icon.ico" app.py'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
