[tool.poetry]
name = "MPT"
version = "1.0.3"
description = "Reads ImageJ results file, in CSV. Exports Multiple Particle Tracking Analysis in xlsx format."
authors = ["Leandro Gabriel <lassisg@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
PySide6 = "^6.1.0"
pandas = "^1.2.4"
XlsxWriter = "^1.4.3"
pathlib = "^1.0.1"
SQLAlchemy = "^1.4.15"
trackpy = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
pyinstaller = "^4.3"

[tool.poetry.scripts]
build_mpt = "build_mpt:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
