[tool.poetry]
name = "MPT"
version = "1.1.0"
description = "Reads ImageJ results file, in CSV. Exports Multiple Particle Tracking Analysis in xlsx format."
authors = ["Leandro Gabriel <leandro@bigiogabriel.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = ">=1.5.3"
#pathlib = ">=1.0.1"
PySide6 = ">=6.4.2"
SQLAlchemy = "<2.0"
trackpy = ">=0.6.1"
XlsxWriter = ">=3.0.9"

[tool.poetry.dev-dependencies]
autopep8 = ">=2.0.2"
flake8 = ">=6.0.0"
pyinstaller = ">=4.3"
pytest = ">=7.2.2"

[tool.poetry.scripts]
build_mpt = "build_mpt:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
